Adding link to create stock in view.html

--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -13,5 +13,14 @@
                 </a> 
             {% endfor %}
             </div>
+            <h2 class="ui dividing header">
+                <i class="picture icon"></i>
+                <div class="content">
+                    Create your stock
+                </div>
+                <a href="{{ url_for('create_stock') }}" class="item">Recent</a>
+            </h2>
         </div>
+
+
 {% include  "footer.html" %}
