changed [Line 21] in view.html to call get_create_stock()

--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -18,7 +18,7 @@
                 <div class="content">
                     Create your stock
                 </div>
-                <a href="{{ url_for('create_stock') }}" class="item">Recent</a>
+                <a href="{{ url_for('get_create_stock') }}" class="item">Recent</a>
             </h2>
         </div>
 
