changed stock_id to display id

--- a/app/templates/stock_id.html
+++ b/app/templates/stock_id.html
@@ -1,6 +1,6 @@
 {% include  "header.html" %}
 <div>
-    <h2>Stock List:</h2>
+    <h2>Stock {{ stock['id'] }}:</h2>
     <div class = "content">
             <div>
                 {{ stock['name'] }}
