Removed extra ']' in portfolio_id.html

--- a/app/templates/portfolio_id.html
+++ b/app/templates/portfolio_id.html
@@ -3,7 +3,7 @@
     <h2>Stock {{ portfolio['id'] }}:</h2>
     <div class = "content">
             <div>
-                {{ portfolio['owner']] }}
+                {{ portfolio['owner'] }}
             </div>
     </div>
 </div>
