relationship backref added to stock for portfolio

--- a/app/templates/portfolio_id.html
+++ b/app/templates/portfolio_id.html
@@ -1,6 +1,6 @@
 {% include  "header.html" %}
 <div>
-    <h2>Stock {{ portfolio['id'] }}:</h2>
+    <h2>Portfolio {{ portfolio['id'] }}:</h2>
     <div class = "content">
             <div>
                 {{ portfolio['owner'] }}
