Changed stocks.html to display all stock info in table
Added COMMENTED put_stock_in_portfolio

--- a/app/templates/stocks.html
+++ b/app/templates/stocks.html
@@ -2,14 +2,22 @@
 <div>
     <h2>Stock List:</h2>
     <div class = "content">
-        {% for stock in stocks %}
-            <!-- <a href="{{ url_for('view_stocks')}}">
-            </a> -->
-            <div>
-                {{ stock['name'] }}
-            </div>
-        {% endfor %}
-        <div></div>
+        <table class="ui celled table">
+            <thead>
+                <tr><th>Name</th>
+                <th>Symbol</th>
+                <th>Price</th>
+            </tr></thead>
+            <tbody>
+                {% for stock in stocks %}
+                <tr>
+                <td data-label="Name">{{ stock['name'] }}</td>
+                <td data-label="Symbol">{{ stock['symbol'] }}</td>
+                <td data-label="Price">{{ stock['price'] }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>        
     </div>
 </div>
 {% include  "footer.html" %}
