--- a/app/templates/stocks.html
+++ b/app/templates/stocks.html
@@ -18,7 +18,7 @@
                 <!-- <td data-label="Assign"><form class="ui small form" action="{{ url_for('put_stock_in_portfolio', stock_id=1, portfolio_id=1) }}" method="post" style="text-align:left">
                         <input type="submit" class="ui fluid green button" value="Submit">
                     </form></td> -->
-                <td data-label="Assignlink"><a href="{{ url_for('put_stock_in_portfolio', stock_id=1, portfolio_id=1) }}"></a></td>
+                <td data-label="Assignlink"><a href="{{ url_for('put_stock_in_portfolio', stock_id=1, portfolio_id=1) }}">Assign</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
