Modified header to include links to view all stocks and all portfolios

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -28,6 +28,8 @@
                 <a href="/" class="item">Home</a>
                 <a href="{{ url_for('view_recent') }}" class="item">Recent</a>
                 <a href="{{ url_for('view_random') }}" target="_blank" class="item">Random</a>
+                <a href="{{ url_for('view_stocks') }}" target="_blank" class="item">View Stocks</a>
+                <a href="{{ url_for('view_portfolios') }}" target="_blank" class="item">View Portfolios</a>
             </div>
         </div>
     </header>
