Adding helper function to get stocks_linked of a portfolio... but not using it unless it is needed
Changed portfolios.html table to callportfolio['stocks_linked']

--- a/app/templates/portfolios.html
+++ b/app/templates/portfolios.html
@@ -11,7 +11,7 @@
                         {% for portfolio in portfolios %}
                         <tr>
                         <td data-label="Owner">{{ portfolio['owner'] }}</td>
-                        <td data-label="Assignlink"><a href="{{ url_for('put_stock_in_portfolio', stock_id='1', portfolio_id='1') }}">Assign</a></td>
+                        <td data-label="Assignlink">{{ portfolio['stocks_linked'] }}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
