Adding if while displaying portfolio -> stocks_linked.
If stocks_linked is not there, then enter 'NONE!' in field

--- a/app/templates/portfolios.html
+++ b/app/templates/portfolios.html
@@ -13,7 +13,11 @@
                         <td data-label="Owner">{{ portfolio['owner'] }}</td>
                         <td data-label="Assignlink">
                             {% for stock in {{ portfolio['stocks_linked'] }} %}
-                            <a>{{ stock['name'] }}</a>
+                                {% if stock is not none %}
+                                    <a>{{ stock['name'] }}</a>
+                                {% else %}
+                                    NONE!
+                                {% endif %}
                             {% endfor %}
                         </td>
                         </tr>
