Changed {{portfolio['stocks_linked']}} to portfolio['stocks_linked'] in portfolios.html (Line 15)

--- a/app/templates/portfolios.html
+++ b/app/templates/portfolios.html
@@ -12,7 +12,7 @@
                         <tr>
                         <td data-label="Owner">{{ portfolio['owner'] }}</td>
                         <td data-label="Assignlink">
-                            {% for stock in {{ portfolio['stocks_linked'] }} %}
+                            {% for stock in portfolio['stocks_linked'] %}
                                 {% if stock is not none %}
                                     <a>{{ stock['name'] }}</a>
                                 {% else %}
